# ies-24-25-group-project-103

./: .gitignore  README.md  package-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
MediSync/: Dockerfile  docker-compose.yml  pom.xml
MediSync/data_generation/vitals_generation/: pyproject.toml
MediSync/frontend/: index.html  package-lock.json  package.json  requirements.txt
MediSync/frontend/src/: AddMedicationButton.jsx  AddStaff.css  AddStaff.jsx  App.css  App.jsx  BMI.jsx  BMI.module.css  BloodPressureAlert.css  BloodPressureAlert.jsx  BloodPressureAlert.module.css  BloodPressureCard.jsx  CodeVerification.jsx  CodeVerification.module.css  CreatePatient.css  CreatePatient.jsx  DischargePatient.jsx  DischargePatientButton.jsx  DischargePatientModal.css  DischargePatientModal.module.css  DoctorPatients.jsx  DoctorPatients.module.css  FloorOverview.jsx  FloorOverview.module.css  GraphModal.jsx  Header.jsx  Header.module.css  HealthOverview.jsx  HealthOverview.module.css  HeartRate.jsx  HeartRateAlert.css  HeartRateAlert.jsx  HeartRateAlert.module.css  HeightBox.jsx  Login.jsx  (+40 more)
MediSync/setup_inserts/: doctors.txt  generate_people.py  generator.py  insert.py  medications.txt  nurses.txt  patients.txt
MediSync/swagger-config/: combined-api.json
MediSync/vitals_generation/: pyproject.toml
MediSync/vitals_generation/vitals_generation/: vitals_producer.py
frontend/medisync/: package-lock.json  package.json  requirements.txt
presentations/: MediSync Final Presentation.pptx  Presentation.md
(+73 files in other folders)
